@startuml

title __POPUPS's Class Diagram__\n

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace popups {
          class com.example.fxjgit.forms.popups.CloneRepositoryController {
              + cloneButton : Button
              ~ git : Git
              - selectedLocationTextField : TextField
              - title : String
              - urlTextField : TextField
              + finalAction()
              + getUser()
              + initialize()
              + setUser()
              - cloneRepository()
              - initialize()
              - onSelectLocationButtonClicked()
              - validateInput()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace popups {
          class com.example.fxjgit.forms.popups.CreateRepositoryController {
              + createButton : Button
              + descriptionTextField : TextField
              + nameTextField : TextField
              + selectedLocationTextField : TextField
              - git : Git
              - title : String
              + createNewRepository()
              + finalAction()
              + initialize()
              + initialize()
              + setUser()
              - onSelectLocationButtonClicked()
              - validateInput()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace popups {
          class com.example.fxjgit.forms.popups.ExistingRepositoryController {
              + openButton : Button
              ~ git : Git
              - pathTextField : TextField
              - title : String
              + finalAction()
              + initialize()
              + initialize()
              + openRepository()
              + setUser()
              - onSelectLocationButtonClicked()
              - validateInput()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.fxjgit {
      namespace forms {
        namespace popups {
          interface com.example.fxjgit.forms.popups.IPopup {
              {abstract} + finalAction()
              {abstract} + setUser()
          }
        }
      }
    }
  }
  

  com.example.fxjgit.forms.popups.CloneRepositoryController .up.|> com.example.fxjgit.forms.popups.IPopup
  com.example.fxjgit.forms.popups.CloneRepositoryController .up.|> javafx.fxml.Initializable
  com.example.fxjgit.forms.popups.CloneRepositoryController o-- com.example.fxjgit.db.entities.User : user
  com.example.fxjgit.forms.popups.CreateRepositoryController .up.|> com.example.fxjgit.forms.popups.IPopup
  com.example.fxjgit.forms.popups.CreateRepositoryController .up.|> javafx.fxml.Initializable
  com.example.fxjgit.forms.popups.CreateRepositoryController o-- com.example.fxjgit.db.entities.User : user
  com.example.fxjgit.forms.popups.ExistingRepositoryController .up.|> com.example.fxjgit.forms.popups.IPopup
  com.example.fxjgit.forms.popups.ExistingRepositoryController .up.|> javafx.fxml.Initializable
  com.example.fxjgit.forms.popups.ExistingRepositoryController o-- com.example.fxjgit.db.entities.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
